Changed the position of the images
Added center tag top the images, and switched their positions

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
 
  <img class="title" src="unnamed.png" >
-  <h1 class="Introduction">Introduction</h1>
+   <br>
+  <h1 style="color: black;" class="Introduction"><strong>Introduction</strong></h1>
 
     <div  id="Hintro" style="margin-right: 10%; margin-left:10% ;">
     <h2>What is stem?</h2>
@@ -46,13 +47,18 @@
         STEM integrates them into a cohesive learning 
         paradigm based on real world applications.</p> 
         <br> <br>
-      
+
+         <center>
+   <img class="stem" src="picture.png">
+         </center>
+         <br>
+
         <h2>What's Vodafone's STEM program</h2>
          Since one of Vodafone's goakls is the empowerment of women, this year Vodafone organised the STEM program and invited girls to join, experience and learn. The course's goal is to provide a basic overview of the recent technologies, but also introduce the girls to coding and its tools. Through-out the week of the program, the girls practice using all the technical tools, and by the end of the week they should submit a website that they have created and that will be entered into a course commpetition! 
    </div>
    <br>
 <center>
-<img class="stem" src="picture.png">
+<img src="images/icon.png" style="width: 20%">
 </center>
     
 
