--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="index.html">Home</a></li>
-      <li><a href="Experiences.html">Experiences</a></li>
+      <li><a href="experiences.html">Experiences</a></li>
       <li><a href="about.html">About</a></li>
     </ul>
   </div>
